# digital-tissue-automate

./: .gitignore copy  README.md  main.py  pylintrc  pyproject.toml
.github/workflows/: main.yml
src/: config.py
src/adapeters/speckle/: mappers.py
src/adapters/: create_domain_model.py
src/domain/metrics/: daylight_potential.py  green_space_index.py  net_floor_area_ratio.py  program_diversity.py
src/domain/model/: elements.py  model_filter.py
tests/adapters/: test_create_domain_model.py  test_create_version.py
tests/domain/: fixture.py  test_daylight_potential.py  test_green_space_index.py  test_model_filter.py  test_net_floor_area_ratio.py  test_program_diversity.py  test_usable_area_ratio.py
