[project]
name = "cw-team03-1-session03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "gql>=3.5.3",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "specklepy>=3.2.4",
]
[tool.setuptools.packages.find]
where = ["src"]
